--- a/lib/dvb/Makefile.inc
+++ b/lib/dvb/Makefile.inc
@@ -28,12 +28,7 @@ dvb_libenigma_dvb_a_SOURCES = \
 	dvb/tstools.cpp \
 	dvb/volume.cpp \
 	dvb/streamserver.cpp \
-	dvb/pmtparse.cpp \
-	dvb/encoder.cpp \
-	dvb/fbc.cpp
-if HAVE_AMLOGIC
-dvb_libenigma_dvb_a_SOURCES += dvb/amldecoder.cpp
-endif
+	dvb/pmtparse.cpp
 
 dvbincludedir = $(pkgincludedir)/lib/dvb
 dvbinclude_HEADERS = \
@@ -69,9 +64,4 @@ dvbinclude_HEADERS = \
 	dvb/tstools.h \
 	dvb/volume.h \
 	dvb/streamserver.h \
-	dvb/pmtparse.h \
-	dvb/encoder.h \
-	dvb/fbc.h
-if HAVE_AMLOGIC
-dvbinclude_HEADERS += dvb/amldecoder.h
-endif
+	dvb/pmtparse.h
